--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -2,11 +2,17 @@
 // # Colors
 
 // # Typography
+// ### Font Family | Outfit
+@import url(https://fonts.bunny.net/css?family=outfit:400,700);
+
+$outfit-font: "Outfit", sans-serif;
+
+body {
+  font-family: $outfit-font;
+}
 
 // # Others
 
 // # Breakpoints
 
 // # Custom Prop
-:root {
-}
